# mytoolbox_tutorial

./: README.md  README.txt  pyproject.toml  setup.py
mytoolbox/: __init__.py  kurucz_atomic_symbols.py
tests/: test_kurucz_atomic_symbols.py
