[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mytoolbox"
version = "0.1.0"
description = "A simple Python package demonstrating best practices, including tests and clear project structure."
# Optional, but recommended to set the authors field
authors = [
    { name="Tomasz Rozanski"}
]
dependencies = [
    "numpy>=1.20"
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
include = ["mytoolbox*"]
